Add an use a roll template for damaging rolls
Loosely based on the Call of Cthulhu roll template. I don't know how to
show the crit chance nicely in the output (something like 20cs>91 isn't
handled properly by the API for some reason, though it works in chat). I
also don't know how to outline just the crit roll result in green, so I
outlined the whole crit box instead.

--- a/barbs_character_sheet/Barbs.css
+++ b/barbs_character_sheet/Barbs.css
@@ -206,6 +206,48 @@
 }
 
 
+
+
+/* Barbs roll template styling */
+
+/* PD/BD rolltemplate */
+.sheet-rolltemplate-Barbs table {
+    width: 100%;
+    border: 1px solid black;
+    color: black;
+    background: #FFFFFF;
+}
+.sheet-rolltemplate-Barbs caption {
+    text-align: center;
+    background: #702082;
+    color: white;
+    font-weight: bold;
+    padding: 2px;
+    border: 1px solid black;
+    line-height: 1.6em;
+}
+.sheet-rolltemplate-Barbs td {
+    padding: 2px;
+    border-bottom: 1px solid black;
+}
+.sheet-rolltemplate-Barbs td.sheet-template_label {
+    font-weight: bold;
+}
+.sheet-rolltemplate-Barbs td.sheet-template_value {
+    text-align: center;
+    color: #000000;
+}
+.sheet-rolltemplate-Barbs .inlinerollresult  {
+    display: inline-block;
+    min-width: 1.5em;
+    text-align: center;
+    border: 2px solid black;
+    color: #000000;
+    background: #BEBEBE;
+}
+
+
+
 /*** ROLL TEMPLATE STYLING ENDS HERE **/
 
 
