Support auto attacks with items
Adjust character sheet roll buttons to be the proper width. They are
1-24. Also add a parameters section for main/off hand items so that
ability effects can be applied.

--- a/barbs_character_sheet/Barbs.css
+++ b/barbs_character_sheet/Barbs.css
@@ -942,6 +942,12 @@ span.sheet-spacer,
     text-align: center;
 }
 
+.sheet-bold,
+.sheet-rolltemplate-5eDefault .sheet-bold {
+    font-weight: bold;
+}
+
+
 textarea {
     width: calc(100% - 10px);
     height: 150px;
