Working on generating a website off the rulebook
* Updating parsing logic to dump out some more fields for some components.
* Fixed number of requirements for classes that weren't fully unlocked.
* Updating parsing to organize components into separate files under the
  'rulebook' directory. There may be a future where this directory becomes
  the source of truth, rather than the google doc.
* Wrote much of the generator script, which now fills out attributes,
  races, skills, and classes based on the files in the 'rulebook'
  directory.

--- a/html/templates/index.html
+++ b/html/templates/index.html
@@ -5,10 +5,9 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="canonical" href="https://html5-templates.com/" />
-    <title>Responsive HTML5 Page Layout Template</title>
-    <meta name="description" content="Simple HTML5 Page layout template with header, footer, sidebar etc.">
+    <title>Barbs Rulebook</title>
+    <meta name="description" content="Barbs Rulebook">
     <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
 </head>
 
 <body>
@@ -59,6 +58,9 @@
 
 			<article>
 				<h2>Attributes</h2>
+
+				<p>At the most base level, what a character is good at and what a character is bad at is defined by their attributes. Each attribute has three uses: firstly, it determines some sort of important scaling, such as health or movement; secondly, it provides an additional modifier for multiple associated skills; thirdly, it allows the character to fulfill the minimum attribute requirements of the skills or classes they want. The value of an attribute can vary between -10 and +20. When you create a character at Level 1, all attributes start at -10, and you add points to the attributes that you deem important. The flat attribute value is what is added to skill checks that are based off that attribute.</p><br>
+
 				{attributes}
 			</article>
 
@@ -87,11 +89,13 @@
 				<h3>Buffs</h3><br>
 				<p>A buff is any effect, magical or not, that is beneficial to an entity. Buffs can be applied by a variety of sources, such as items or abilities. Buffs can also be stripped, or removed, by items or abilities. Most buffs have a standard duration, which could vary based on the source applying them. While many abilities grant unique buffs, the following list of buffs are common and are granted by many sources (all mentions of “you” or “your” refer to the afflicted entity):</p><br>
 
-				{buffs_and_conditions}
+				{buffs}
 				<br>
 
 				<h3>Conditions</h3><br>
 				<p>A condition is any effect, magical or not, that is detrimental to an entity. Conditions can be applied by a variety of sources, such as items or abilities. Conditions can also be cleansed, or removed, by items or abilities. Most conditions have a standard duration, which could vary based on the source applying them. While many abilities inflict unique conditions, the following list of conditions are global and are granted by many sources (all mentions of “you” or “your” refer to the afflicted entity):</p>
+
+				{conditions}
 			</article>
 
 			<article>
@@ -229,7 +233,7 @@
 
 			<article>
 				<h2>Crafing</h2>
-				{crafting}
+				<h1>TODO</h1>
 			</article>
 
 			<article>
