Fill out class hints and add some section links
Class branches in the overview can link to the actual branches. Class
hints can link to the actual class, if present. Skill's scaling
attributes can link to the actual attribute.

--- a/html/templates/ability.html
+++ b/html/templates/ability.html
@@ -1,15 +1,15 @@
-<table style="width:100%">
+<a id="ability_{name}"><table style="width:100%">
     <tr>
-        <td><b><i>{name}</i></b></td>
+        <td><i>{name}</i></td>
         <td>{action}</td>
         <td>Cost: {cost}</td>
         <td>Range: {range}</td>
         <td>Duration: {duration}</td>
     </tr>
     <tr>
-        <td colspan="5">{description}</td>
+        <td colspan="5" style="text-align: left">{description}</td>
     </tr>
     <tr>
-        <td colspan="5">Tags: {tags}</td>
+        <td colspan="5" style="text-align: left">Tags: {tags}</td>
     </tr>
-</table>
+</table></a>
