--- a/html/templates/skill.html
+++ b/html/templates/skill.html
@@ -1,3 +1,4 @@
-<p><b>{name}</b></p>
+<a id="skill_{name}"><p><b>{name}</b></p></a>
 <p>{description}</p>
+<p>{name} checks are affected by <a href="#attribute_{attribute}">{attribute}</a></p>
 {rank_notes}
