--- a/html/templates/race.html
+++ b/html/templates/race.html
@@ -1,4 +1,4 @@
-<p><b>{name}</b> – {description}</p><br>
+<a id="race_{name}"><p><b>{name}</b> – {description}</p><br></a>
 
 <p>Traits:</p>
 {traits}
