Fix the broken html
Put li elements under ul elements. Fix li styling. Fix duplicate ids.
Handle branches and abilities with the same name.

--- a/html/templates/branch.html
+++ b/html/templates/branch.html
@@ -1,2 +1,2 @@
-<a id="branch_{branch}"><p><b>{branch}</b></p><br></a>
+<a id="class_{clazz}_branch_{branch}"><p><b>{branch}</b></p><br></a>
 {abilities}
