--- a/html/templates/class.html
+++ b/html/templates/class.html
@@ -1,7 +1,9 @@
 <a id="class_{name}"><h3>{name}</h3><br></a>
 
 <p><b><u>Requirements</u></b></p>
-{requirements}<br>
+<ul>
+{requirements}
+</ul><br>
 
 <p><b><u>Description</u></b></p>
 
@@ -9,7 +11,9 @@
 
 &nbsp&nbsp&nbsp&nbsp{description}<br><br>
 
-{branch_descriptions}<br>
+<ul>
+{branch_descriptions}
+</ul><br>
 
 <p><b><u>Passive</u>:</b> {passive_name} - {passive_description}</p><br>
 
