--- a/html/templates/style.css
+++ b/html/templates/style.css
@@ -166,18 +166,6 @@ article p {
 
 main section {}
 
-footer {
-    background: #AEC6CF;
-    max-width: 1000px;
-    margin: auto;
-    clear: both;
-    text-align: right;
-}
-
-footer p {
-    padding: 20px;
-}
-
 address {
     padding: 10px 20px 30px 10px;
 }
@@ -188,26 +176,16 @@ aside>div {
     min-height: 100px;
 }
 
-#logo {
-    display: inline-block;
-    vertical-align: middle;
-    font-size: 30px;
-    margin-right: 75px;
-    color: #FFF;
-}
-
-#logo img {
-    width: 750px;
-    vertical-align: middle;
-    margin-right: 10px;
-}
-
 body>section {
     max-width: 1000px;
     margin: auto;
     padding: 30px 0px;
     border-bottom: 1px solid #999;
     color: #333;
+}
+
+body {
+    font-family: "Lato", sans-serif;
 }
 
 @media screen and (max-width: 1000px) {
@@ -227,6 +205,19 @@ body>section {
     }
 }
 
+/* lists */
+
+li {
+    margin-left: 20px;
+    padding-bottom: 5px;
+}
+
+.spaced {
+    padding-bottom: 15px;
+}
+
+/* tables */
+
 table, th, td {
     border: 1px solid black;
 }
@@ -245,4 +236,67 @@ td {
     text-align: center;
     vertical-align: middle;
     width: 25%;
+}
+
+
+/* image at the top */
+
+#logo {
+    display: inline-block;
+    vertical-align: middle;
+    font-size: 30px;
+    margin-right: 75px;
+    color: #FFF;
+}
+
+#logo img {
+    width: 750px;
+    vertical-align: middle;
+    margin-right: 10px;
+}
+
+/* sidebar */
+
+.sidenav {
+    height: 100%;
+    width: 320px;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    background-color: #111;
+    overflow-x: hidden;
+    padding-top: 20px;
+}
+
+.sidenav a {
+    padding: 6px 8px 6px 16px;
+    text-decoration: none;
+    font-size: 20px;
+    color: #818181;
+    display: block;
+}
+
+.sidenav a:hover {
+    color: #f1f1f1;
+}
+
+.sidenav-subsection {
+    background-color: #111;
+    padding-left: 20px;
+}
+
+.sidenav-subsection a {
+    font-size: 14px;
+}
+
+.main {
+    margin-left: 160px; /* Same as the width of the sidenav */
+    font-size: 28px; /* Increased text to enable scrolling */
+    padding: 0px 10px;
+}
+
+@media screen and (max-height: 450px) {
+    .sidenav {padding-top: 15px;}
+    .sidenav a {font-size: 18px;}
 }
