--- a/html/templates/ability.html
+++ b/html/templates/ability.html
@@ -1,4 +1,4 @@
-<a id="class_{clazz}_ability_{name}"><table style="width:100%">
+<a id="class_{clazz}_ability_{name}"><table>
     <tr>
         <td><i>{name}</i></td>
         <td>{action}</td>
