--- a/html/templates/branch.html
+++ b/html/templates/branch.html
@@ -1,2 +1,2 @@
-<a id="class_{clazz}_branch_{branch}"><p><b>{branch}</b></p><br></a>
+<a id="class_{clazz}_branch_{branch}"><h4>{branch}</h4></a>
 {abilities}
