--- a/html/templates/index.html
+++ b/html/templates/index.html
@@ -13,7 +13,7 @@
 
 <div id="logo-container">
 	<div id="logo">
-		<img src="https://i.imgur.com/6m8DpgS.png" alt="logo">
+		<img src="https://i.imgur.com/9u8XLg7.png" alt="logo">
 	</div>
 </div>
 
