Fix abilities/passives with bullet points through 'E'
This required a bit of editing in the generator scripts to stop putting
<p> tags around bullet-point lists.

--- a/html/templates/class.html
+++ b/html/templates/class.html
@@ -15,7 +15,7 @@
 {branch_descriptions}
 </ul><br>
 
-<p><b><u>Passive</u>:</b> {passive_name} - {passive_description}</p><br>
+<p><b><u>Passive</u>:</b> {passive_name} - {passive_description}<br>
 
 {branches}
 
