--- a/html/templates/class.html
+++ b/html/templates/class.html
@@ -15,7 +15,7 @@
 {branch_descriptions}
 </ul><br>
 
-<p><b><u>Passive</u>:</b> {passive_name} - {passive_description}<br>
+<p><b><u>Passive</u>:</b> <i>{passive_name}</i> - {passive_description}<br>
 
 {branches}
 
