Link to passive
If an ability references the passive of the class by name, italicize the
passive and link to it.

--- a/html/templates/class.html
+++ b/html/templates/class.html
@@ -15,6 +15,7 @@
 {branch_descriptions}
 </ul><br>
 
+<a id="{name}_{passive_name}"></a>
 <p><b><u>Passive</u>:</b> <i>{passive_name}</i> - {passive_description}<br>
 
 {branches}
