--- a/html/templates/style.css
+++ b/html/templates/style.css
@@ -17,6 +17,11 @@ body {
     font-family: "Times New Roman", Times, serif;
 }
 
+.monospace {
+    font-family: "Courier New", Courier, monospace;
+    font-size: 18px;
+}
+
 section {
     display: block;
 }
@@ -85,9 +90,13 @@ img {
 
 /* lists */
 
-li {
+ul li {
     margin-left: 20px;
     padding-bottom: 5px;
+}
+
+ul li ul li {
+    margin-left: 40px;
 }
 
 .spaced {
