Add hover text for cross-page links

--- a/html/templates/api_class.html
+++ b/html/templates/api_class.html
@@ -1,4 +1,4 @@
-<a id="class_{name}" href="/#class_{name}"><h3>{name}</h3></a>
+<a id="class_{name}" href="/#class_{name}" title="Rulebook"><h3>{name}</h3></a>
 
 {abilities}
 
