Add links between rulebook and api to sidebar

--- a/html/templates/api.html
+++ b/html/templates/api.html
@@ -20,6 +20,7 @@
 <div class="grid-container">
     <div id="sidebar" class="sidenav">
         <a href="#Foreword">Foreword</a>
+        <a href="/">Barbs Rulebook</a>
         <a href="#Character Sheet">Character Sheet</a>
         <a href="#General">General</a>
         <div class="sidenav-subsection">
