--- a/html/templates/index.html
+++ b/html/templates/index.html
@@ -20,6 +20,7 @@
 <div class="grid-container">
 	<div id="sidebar" class="sidenav">
 		<a href="#Foreword">Foreword</a>
+		<a href="/api">Barbs API Usage</a>
 		<a href="#Design Goals">Design Goals</a>
 		<a href="#System Basics">System Basics</a>
 		<a href="#Attributes">Attributes</a>
