--- a/html/templates/index.html
+++ b/html/templates/index.html
@@ -1011,6 +1011,8 @@
 			<p>This is a list of all the classes for which at least 1 skill requirement has been achieved. These hints will provide players with some direction as to what the other skill requirements might be. The following lists have mixed together all players’ unlocked hints. Classes whose requirements have all been discovered are highlighted in red.</p>
 			<br>
 			{class_hint_unlocks}
+
+			<div class="row-full"></div>
 			<br>
 			{classes}
 		</article>
