Add lore to the rulebook

--- a/html/templates/index.html
+++ b/html/templates/index.html
@@ -11,8 +11,8 @@
 </head>
 <body>
 
-<div id="logo-container">
-	<div id="logo">
+<div class="img-container-l1">
+	<div class="img-container-l2">
 		<img src="https://i.imgur.com/9u8XLg7.png" alt="logo">
 	</div>
 </div>
@@ -21,6 +21,10 @@
 	<div id="sidebar" class="sidenav">
 		<a href="#Foreword">Foreword</a>
 		<a href="/api">Barbs API Usage</a>
+		<a href="#Setting">Setting</a>
+		<div class="sidenav-subsection">
+			<a href="#God Alignments">God Alignments</a>
+		</div>
 		<a href="#Design Goals">Design Goals</a>
 		<a href="#System Basics">System Basics</a>
 		<a href="#Attributes">Attributes</a>
@@ -82,6 +86,39 @@
 			<br>
 			<p>&nbsp;&nbsp;&nbsp;&nbsp;Sincerely,</p>
 			<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Adam Chiyezhan</p>
+		</article>
+
+		<article>
+			<a id="Setting">
+				<h2>Setting</h2>
+			</a>
+
+			<p>&nbsp;&nbsp;&nbsp;&nbsp;It’s been 2000 years since the event known simply as, The Singularity. Prior to this final cataclysm, Lemuria was a simple place, where humans lived alongside the land, and used powerful magic and advancements in technology to conquer the Earth. The land was watched over by 7 gods of Good, who protected the values that kept humanity from devolving to a baser, bestial nature. Counteracting their work were 7 gods of Evil, who were the source of many of humanities worst traits. With humans acting as the focal point, all of these entities constituted a delicate balance.</p>
+			<p>&nbsp;&nbsp;&nbsp;&nbsp;But magical research and technological advancement eventually led to the discovery of other, parallel worlds. Worlds populated by fantastic beasts and bizarre sentient races. Worlds governed by different rules entirely. These worlds were separated by a space known as the Obscure Infinities, which blocked any sort of possible passage between them. Only entities known as Conduits could bridge the gap, and allow information or possibly even living beings to pass from one world to another.
+			<br>
+			<p>&nbsp;&nbsp;&nbsp;&nbsp;Legends tell of a party of adventurers with no parallel. Warriors who never fell in battle, mages who could cast miraculous spells. They came at a time when Lemuria was under assault by the gods of Evil, and turned the tides. Slaying each god one by one, it seemed like they were the heroes that Lemuria had been waiting for. After slaying the final god of evil, and preventing another from rising to power, the heroes discovered a highly unstable Conduit that threatened to smash together worlds. Unable, or unwilling, to stop the Conduit themselves, the party set out in search of the gods of Good, to stop what would surely be total annihilation.</p>
+			<p>&nbsp;&nbsp;&nbsp;&nbsp;But something went horribly wrong with their quest. What exactly happened is lost to history, but the members of the party split up, and the gods of Good were killed instead of saved... </p>
+			<br>
+			<p>&nbsp;&nbsp;&nbsp;&nbsp;With the disappearance of the party of heroes, the Conduit began drawing together nearby worlds. The overlap of these worlds caused violent magical cataclysms throughout Lemuria. Things were created and obliterating randomly. Entire lands blinked in and out of existence. The destruction of many towns and cities saw an end to technological advancement; in fact, technology took many steps backwards instead, as knowledge, records, and even memories were destroyed. It seemed that this was the end for Lemuria.</p>
+			<p>&nbsp;&nbsp;&nbsp;&nbsp;But at the end of days, that legendary party of heroes returned. As their final act together, they stabilized the Conduit and destroyed it. The Singularity occurred, bringing each nearby world threatening to destroy the fabric of reality together and overlapping them perfectly. The magical cataclysms ended, and a new Lemuria was born. This new Lemuria was fractured into many smaller islands, and the world’s seas were poisons. Various new sentient races arose, and the humans of Lemuria found that they had to learn to coexist with wildly different people. The fundamental principles of magic were rewritten, and technological advancement had to restart. And a new pantheon of immortals rose to be worshipped by Lemurians.</p>
+			<p>&nbsp;&nbsp;&nbsp;&nbsp;Nox, god of heroism, loyalty, honor, and freedom. Worshipped by adventurers and soldiers alike, Nox is a beacon of light and victory for those who bravely fight against the forces of darkness and evil. His biggest following is the Noxian Paladin Order, elite warrior priests that work as an internationally recognized police force.</p>
+			<p>&nbsp;&nbsp;&nbsp;&nbsp;Kefanas, the dual faced god of assassins, mages, craftsmen, and the working man. Many merchants, smiths, and working class individuals privately pray to Kefanas for guidance and protection. The many Guilds of Lemuria worship Kefanas as their patron god.</p>
+			<p>&nbsp;&nbsp;&nbsp;&nbsp;Aloys, god of charity, time, space, and infinite possibility. Members of the Church of Aloys number in them millions throughout the world, and publically pray to him in large churches. They devote large amounts of their time to charity, just like Aloys did during the times of the Cataclysm.</p>
+			<p>&nbsp;&nbsp;&nbsp;&nbsp;Davas, god of magical secrets, mystical beasts, arcane advancement, and the pursuit of knowledge. Worshippers of Davas are mostly limited to students and professors of magic, who see Davas as the patron god of magical study. A select few archmages are devout followers of Davas, and practice his ways of solitude and research.</p>
+			<p>&nbsp;&nbsp;&nbsp;&nbsp;Adol, god of death, the afterlife, disease, and law. Adol oversees the gates of Death, and all who perish must answer to him in their afterlife. His power over death makes him one of the most worshipped gods, and he has smaller churches in select cities throughout the world. His priesthood is especially devout, and missionaries cross land, sea, and sky to spread his teachings.</p>
+			<p>&nbsp;&nbsp;&nbsp;&nbsp;Phaxette, god of shadows, love, music, and art. Many young lovers and women see her as their patron god, and a large number of the youth privately pray to her. A select few are chosen by Phaxette as champions, and granted a fraction of her powers, as well as a glimpse into her lavish lifestyle, which her followers aspire to attain.</p>
+			<p>&nbsp;&nbsp;&nbsp;&nbsp;Dren, god of murder, assault, bloodshed, and violence. Worship of Dren is illegal in most parts of the world, as he is one of the only gods who comes down to Earth to slaughter and kill mortals. Despite this, a cult of devout followers perform ritualistic murders in his name, although they haven’t been seen in a few decades.</p>
+			<br>
+			<p>&nbsp;&nbsp;&nbsp;&nbsp;Lemuria today consists of a large number of large islands. Each of these islands contains various city-states, each with their own governments. Tying these cities together is a vast network of trade and travel. Each city boasts its own unique aspects: some examples include Silverflask (home to the Silver Tower, an all female group of mages), Hearthfire (a small town in the mountains guarded by an ancient silver dragon), Bastion (a large city built into the remains of a massive skeletal turtle), and Nighthelm (a city that never sees daylight).</p>
+			<br>
+
+			<a id="God Alignments"><h3>God Alignments</h3></a>
+			<br>
+			<div>
+				<div class="img-container-l2">
+					<img src="https://i.imgur.com/MgugT0Y.jpg" alt="gods">
+				</div>
+			</div>
 		</article>
 
 		<article>
