--- a/html/templates/api.html
+++ b/html/templates/api.html
@@ -11,8 +11,8 @@
 </head>
 <body>
 
-<div id="logo-container">
-    <div id="logo">
+<div class="img-container-l1">
+    <div class="img-container-l2">
         <img src="https://i.imgur.com/9u8XLg7.png" alt="logo">
     </div>
 </div>
