Make helpers for checking roll type
The methods should help ensure that we don't forget to check if a roll
type is ALL.

Fix a parameter name conflict between damage and damage_types. Now the
arbitrary parameters handler is a bit more strict in identifying
matches.

--- a/html/templates/api.html
+++ b/html/templates/api.html
@@ -118,7 +118,7 @@
                 <li><span class="monospace">damage &lt;damage_dice&gt; &lt;damage_type&gt;</span>
                     <ul>
                         <li><span class="monospace">damage_dice</span> can be any valid Roll20 roll expression, like "5d8" or "10+2d6".</li>
-                        <li><span class="monospace">damage_type</span> must be one of the following: <span class="monospace">physical, psychic, fire, water, earth, air, ice, lightning, light, dark, healing, all_magic, all</span></li>
+                        <li><span class="monospace">damage_type</span> must be one of the following: <span class="monospace">physical, psychic, fire, water, earth, air, ice, lightning, light, dark, healing</span></li>
                         <li>For example - <span class="monospace">"damage 5d8 air"</span> - will add 5d8 air damage to your attack.</li>
                     </ul>
                 </li>
