--- a/html/templates/api.html
+++ b/html/templates/api.html
@@ -123,13 +123,12 @@
                     </ul>
                 </li>
 
-                <li><span class="monospace">efficiency &lt;efficiency&gt;</span>
+                <li><span class="monospace">effectiveness &lt;effectiveness&gt;</span>
                     <ul>
-                        <li><span class="monospace">efficiency</span> is the percentage increase. You do not need to add 1; use 50% for 50% buff efficiency.</li>
-                        <li>For an attack ability, including the "efficiency" parameter will increase the damage by the specified percentage.</li>
-                        <li>For a buffing ability, including the "efficiency" parameter will increase the effect that the buff applies. Damage granted by the buff will have increased damage dice. Multipliers granted by the buff will be increased. Crit chance or crit damage mod granted by the buff will be increased. Stat and skill bonuses granted by the buff will be increased.</li>
-                        <li>For <i>decreased</i> ability efficiency, you can specify a negative efficiency, e.g. "-25%".</li>
-                        <li>For example - <span class="monospace">"efficiency 50%"</span> - will perform attacks with 50% increased damage and grant buffs with 50% increased effects.</li>
+                        <li><span class="monospace">effectiveness</span> is the percentage increase. You do not need to add 1; use 50% for 50% buff effectiveness.</li>
+                        <li>For a buffing ability, including the "effectiveness" parameter will increase the effect that the buff applies. Damage granted by the buff will have increased damage dice. Multipliers granted by the buff will be increased. Crit chance or crit damage mod granted by the buff will be increased. Stat and skill bonuses granted by the buff will be increased.</li>
+                        <li>For <i>decreased</i> buff effectiveness, you can specify a negative effectiveness, e.g. "-25%".</li>
+                        <li>For example - <span class="monospace">"effectiveness 50%"</span> - will grant a buff that has 50% increased effectiveness.</li>
                     </ul>
                 </li>
             </ul>
